# phys-tech

./: .gitignore  app.json  babel.config.js  package-lock.json  package.json
mobile/: App.tsx  README.md  Router.tsx  app.json  babel.config.js  eas.json  package-lock.json  package.json  tamagui.config.ts  tsconfig.json
mobile-v2/: .env-sample  App.tsx  README.md  Router.tsx  app.json  eas.json  package.json  schema.yaml
mobile/.tamagui/: tamagui.config.json
server/: .env-sample  Dockerfile  README.md  alembic.ini  config.py  database.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt
server/migrations/: env.py
server/migrations/versions/: 0001_init.py  0001_user.py  0002_service.py  0002_service_image.py  0002_user.py  0003_add_user_avatar.py  0003_event.py  0003_organization.py  0004_add_user_contact.py  0004_add_user_contact_and_service_request_.py  0004_event.py  0005_add_service_request_and_add_relations.py  0005_service_request_cascade_delete.py  0005_update_user_organization.py  0006_add_organization_profile.py  0006_organization_profile.py  0006_update_organization_category_enum.py  0007_add_user_events.py  0007_photo_organization.py  0008_add_service_fields.py  0008_enum_eng.py  6d4bb18b725c_0001.py
server/models/: __init__.py  event.py  models.py  organization.py  service.py  service_image.py  service_request.py  user.py
server/modules/auth/: database.py  schemas.py  user_manager.py
server/src/auth/: admin.py  auth_backend.py  permission_checker.py  rbac.py  router.py  schemas.py  service.py  user_manager.py  utils.py
server/src/event/: admin.py  router.py  schemas.py  service.py
server/src/organization/: admin.py  router.py  schemas.py  service.py
server/src/s3/: service.py
server/src/sendgrid/: service.py
server/src/service/: admin.py  crud.py  filters.py  router.py  schemas.py  service.py  service_router.py
server/src/service_image/: admin.py  router.py  schemas.py  service.py
server/src/service_request/: admin.py  router.py  schemas.py  service.py
server/src/supabase/: service.py
server/src/user/: auth.py  auth_router.py  schemas.py  user_router.py  utils.py
server/templates/: privacy-policy.html  terms-and-conditions.html
server/tests/: test_create_service.py
web/: .env-sample  Dockerfile  credentials.json  docker-compose.yaml  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+384 files in other folders)
