[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["AsgardPavlov <pasgard9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
asyncpg = "^0.29.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
fastapi-pagination = "^0.12.14"
fastapi-filter = "^1.1.0"
sqladmin = {extras = ["full"], version = "^0.16.0"}
jinja2 = "^3.1.3"
black = "^24.1.1"
isort = "^5.13.2"
boto3 = "^1.34.41"
bcrypt = "4.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic-postgresql-enum = "^1.1.2"
pytz = "^2024.1"
sendgrid = "^6.11.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.3"

[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
    /(
        \.git
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | _build
        | buck-out
        | build
        | dist
        | migrations/versions
    )/
'''

[tool.isort]
profile = "black"
known_third_party = ["fastapi"]
known_first_party = ["your_project_name"]
line_length = 79
skip = ["migrations/versions"]

#[tool.flake8]
#max-line-length = 79
##extend-ignore = "E402,W503"
#ignore = [
#    "E203",
#    "E221",
#    "E222",
#    "E241",
#    "E251",
#    "E261",
#    "E266",
#    "E272",
#    "E501",
#    "W503",
#    "I100",
#    "I101",
#    "I201",
#    "I202",
#    "I004"
#]
#exclude = [
#    ".git",
#    ".hg",
#    ".mypy_cache",
#    ".tox",
#    ".venv",
#    "_build",
#    "buck-out",
#    "build",
#    "dist",
#    "migrations"
#]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
